# plank

./: .bzrignore  .gitignore  AUTHORS  COPYRIGHT  HACKING  Makefile.am  Makefile.common  Makefile.coverage  Makefile.gmock  Makefile.schemas  NEWS  README  autogen.sh  config.h.meson  configure.ac  libbamf.vapi  meson.build  meson_options.txt
Plank/: Build.vapi  CompositedWindow.vala  DockItems.vala  DockPreferences.vala  DockRenderer.vala  DockWindow.vala  DragManager.vala  HideManager.vala  HoverWindow.vala  Makefile.am  Plank.vala  PlankSurface.vala  PoofWindow.vala  ThemeRenderer.vala
Plank/Drawing/: Color.vala  DockSurface.vala  DockThemeRenderer.vala  DrawingService.vala  ThemeRenderer.vala
Plank/Factories/: AbstractMain.vala  Factory.vala  ItemFactory.vala
Plank/Items/: ApplicationDockItem.vala  DockItem.vala  DockItemPreferences.vala  FileDockItem.vala  PlankDockItem.vala  TransientDockItem.vala
Plank/Services/: Drawing.vala  Logger.vala  Matcher.vala  Paths.vala  Preferences.vala  System.vala  WindowControl.vala
Plank/Widgets/: CompositedWindow.vala  DockWindow.vala  HoverWindow.vala  PoofWindow.vala  TitledSeparator.vala
build-aux/: bzr-version-gen  git-version-gen
data/: Makefile.am  meson.build  net.launchpad.plank.gschema.xml.in  net.launchpad.plank.gschema.xml.in.in  plank.1  plank.appdata.xml.in  plank.desktop.in  plank.gresource.xml
data/apport/: Makefile.am  plank-crashdb.conf  source_plank.py
data/icons/: Makefile.am
data/icons/22x22/apps/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/128x128/apps/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/32x32/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/64x64/apps/: Makefile.am
data/themes/: Makefile.am
data/themes/Default/: Makefile.am  dock.theme  hover.theme
data/themes/Glowless/: dock.theme
data/themes/Matte/: Makefile.am  dock.theme  hover.theme
data/themes/Transparent/: Makefile.am  dock.theme
data/ui/: preferences.ui
docklets/: Makefile.am  meson.build
docklets/Applications/: ApplicationsDockItem.vala  ApplicationsDocklet.vala  Makefile.am  meson.build
docklets/Battery/: BatteryDockItem.vala  BatteryDocklet.vala  BatteryPreferences.vala  BatteryUPowerDockItem.vala  Makefile.am  battery.gresource.xml  meson.build
docklets/CPUMonitor/: CPUMonitorDockItem.vala  CPUMonitorDocklet.vala  Makefile.am  meson.build
docklets/Calendar/: CalendarDockItem.vala  CalendarDocklet.vala  CalendarPreferences.vala  calendar.gresource.xml  meson.build
docklets/Clippy/: ClippyDockItem.vala  ClippyDocklet.vala  ClippyPreferences.vala  Makefile.am  meson.build
docklets/Clock/: ClockDockCalendar.vala  ClockDockItem.vala  ClockDocklet.vala  ClockPreferences.vala  Makefile.am  clock.gresource.xml  meson.build
docklets/Desktop/: DesktopDockItem.vala  DesktopDocklet.vala  Makefile.am  desktop.gresource.xml  meson.build
docklets/Trash/: Makefile.am  TrashDockItem.vala  TrashDocklet.vala  meson.build
docs/: Makefile.am  meson.build  plank.1  plank.h2m
examples/: Makefile.am  RemoteClient.vala  UnityClient.vala  meson.build
lib/: DBusManager.vala  DockController.vala  DockItems.vala  DockPreferences.vala  DockRenderer.vala  DragManager.vala  HideManager.vala  InternalConsts.vala  InternalQuarks.vala  KeybindingManager.vala  Makefile.am  PositionManager.vala  Version.vala.in  abicheck.sh  glib-compat.c  gtk-compat.c  gtk-compat.h  libplank.pc.in  libplank.symbols  libplank3.pc.in  libplank3.symbols  meson.build  plank.deps  plank.deps.in  plank.gresource.xml  plank.pc.in
lib/DBus/: Client.vala  Interfaces.vala
lib/Docklets/: Docklet.vala  DockletItem.vala  DockletManager.vala
lib/Drawing/: AnimatedRenderer.vala  Color.vala  DockSurface.vala  DockTheme.vala  DockThemeRenderer.vala  DrawingService.vala  Easing.vala  Enums.vala  HoverTheme.vala  HoverThemeRenderer.vala  Renderer.vala  Surface.vala  SurfaceCache.vala  Theme.vala  ThemeRenderer.vala
lib/Factories/: AbstractMain.vala  Factory.vala  ItemFactory.vala
lib/Items/: ApplicationDockItem.vala  ApplicationDockItemProvider.vala  DefaultApplicationDockItemProvider.vala  DefaultDockItemProvider.vala  DockContainer.vala  DockElement.vala  DockItem.vala  DockItemDrawValue.vala  DockItemPreferences.vala  DockItemProvider.vala  Enums.vala  FileDockItem.vala  PlaceholderDockItem.vala  PlankDockItem.vala  TransientDockItem.vala
lib/Services/: Environment.vala  EnvironmentSettings.vala  Logger.vala  Matcher.vala  OffSettings.vala  Paths.vala  Preferences.vala  Settings.vala  System.vala  Unity.vala  Utils.vala  WindowControl.vala  Worker.vala
lib/Widgets/: CompositedWindow.vala  DockWindow.vala  DockletViewModel.vala  HoverWindow.vala  PoofWindow.vala  PreferencesWindow.vala  TitledSeparatorMenuItem.vala
libbamf/: libbamf.excludes  libbamf.files  libbamf.metadata
m4/: Makefile.am  as-ac-expand.m4  gcov.m4  gmock.m4  shave.m4
man/: Makefile.am  plank.1
misc/: build-bamf-vapi.sh
misc/bamf/: libbamf.excludes  libbamf.files  libbamf.gi  libbamf.metadata  libbamf.namespace
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  am.po  ar.po  be.po  bg.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  lv.po  ml.po  ms.po  (+27 more)
shave/: shave.in
src/: Main.vala  Makefile.am  PlankMain.vala  meson.build
tests/: Controller.vala  Dock.vala  Drawing.vala  Items.vala  Main.vala  Makefile.am  Preferences.vala  TestHelper.vala  Widgets.vala  meson.build  test-config.h  test-config.vapi
tests/data/: test-app.dockitem  test.desktop
tests/data/themes/Test/: dock.theme  hover.theme
tests/gmock/: color.cpp  main.cpp
vapi/: Makefile.am  bamf.vapi  compat.vapi  config.vapi  libbamf3.vapi  xfixes.vapi  xi.deps  xi.vapi
